cabal-version: 3.0
name: poker-fold
version: 0.1.1.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2020
category: games
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/poker-fold#readme
bug-reports: https://github.com/tonyday567/poker-fold/issues
synopsis: A poker (haskell) library
description:
    An experimental poker library building on poker-base, focused on

    - fast evaluation

    - poker algorithms and intelligence

    - game strategy

    ![odds](other/odds2.svg)

build-type: Simple
tested-with: GHC == 8.10.7 || ==9.2.8 || ==9.4.5 || ==9.6.2
extra-doc-files:
    ChangeLog.md
    other/*.svg
    readme.org

source-repository head
    type: git
    location: https://github.com/tonyday567/poker-fold

common ghc-options-exe-stanza
    ghc-options:
        -fforce-recomp
        -funbox-strict-fields
        -rtsopts
        -threaded
        -with-rtsopts=-N

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    if impl ( ghc >= 9.2 )
        default-language: GHC2021

    if impl ( ghc < 9.2 )
        default-language: Haskell2010
        default-extensions:
            BangPatterns
            BinaryLiterals
            ConstrainedClassMethods
            ConstraintKinds
            DeriveDataTypeable
            DeriveFoldable
            DeriveFunctor
            DeriveGeneric
            DeriveLift
            DeriveTraversable
            DoAndIfThenElse
            EmptyCase
            EmptyDataDecls
            EmptyDataDeriving
            ExistentialQuantification
            ExplicitForAll
            FlexibleContexts
            FlexibleInstances
            ForeignFunctionInterface
            GADTSyntax
            GeneralisedNewtypeDeriving
            HexFloatLiterals
            ImplicitPrelude
            InstanceSigs
            KindSignatures
            MonomorphismRestriction
            MultiParamTypeClasses
            NamedFieldPuns
            NamedWildCards
            NumericUnderscores
            PatternGuards
            PolyKinds
            PostfixOperators
            RankNTypes
            RelaxedPolyRec
            ScopedTypeVariables
            StandaloneDeriving
            StarIsType
            TraditionalRecordSyntax
            TupleSections
            TypeApplications
            TypeOperators
            TypeSynonymInstances

    if impl ( ghc < 9.2 ) && impl ( ghc >= 8.10 )
        default-extensions:
            ImportQualifiedPost
            StandaloneKindSignatures

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , adjunctions       >=4.0 && <5
        , base              >=4.7 && <5
        , chart-svg         >=0.4 && <0.5
        , containers        >=0.6 && <0.7
        , deepseq           >=1.4.4 && <1.5
        , distributive      >=0.4 && <0.7
        , formatn           >=0.2.1 && <0.4
        , mtl               >=2.2.2 && <2.4
        , numhask-array     >=0.10 && <0.12
        , optics-core       >=0.4 && <0.5
        , prettyprinter     >=1.7.1 && <1.8
        , random            >=1.2 && <1.3
        , text              >=1.2 && <2.1
        , vector            >=0.12.3 && <0.14
        , vector-algorithms >=0.8.0 && <0.10
        -- generic-lens >= 2.2.2 && < 2.3,
        , vector-mmap       >=0.0.3 && <0.1
    exposed-modules:
        Poker.Card
        Poker.Card.Storable
        Poker.Charts
        Poker.HandRank
        Poker.Lexico
        Poker.Random
        Poker.Range
        Poker.Table

executable poker-fold-speed
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: speed.hs
    hs-source-dirs: app
    build-depends:
        , base                 >=4.7 && <5
        , containers           >=0.6 && <0.7
        , deepseq              >=1.4.4 && <1.5
        , mtl                  >=2.2.2 && <2.4
        , optparse-applicative >=0.17 && <0.19
        , perf                 >=0.10 && <0.12
        , poker-fold
        , random               >=1.2 && <1.3
        , vector               >=0.12.3 && <0.14
    ghc-options: -O2

executable poker-fold-writes
    import: ghc-options-exe-stanza
    import: ghc-options-stanza
    import: ghc2021-stanza
    main-is: writes.hs
    hs-source-dirs: app
    build-depends:
        , base                 >=4.7 && <5
        , optparse-applicative >=0.17 && <0.19
        , poker-fold
    ghc-options: -O2
