cabal-version: 3.0
name: research-hackage
version: 0.0.1
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2022
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/research-hackage#readme
bug-reports: https://github.com/tonyday567/research-hackage/issues
synopsis: See readme.org
description: See readme.org for description.
build-type: Simple
tested-with: GHC == 8.10.7

source-repository head
    type: git
    location: https://github.com/tonyday567/research-hackage

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    if impl ( ghc >= 9.2 )
        default-language: GHC2021

    if impl ( ghc < 9.2 )
        default-language: Haskell2010
        default-extensions:
            BangPatterns
            BinaryLiterals
            ConstrainedClassMethods
            ConstraintKinds
            DeriveDataTypeable
            DeriveFoldable
            DeriveFunctor
            DeriveGeneric
            DeriveLift
            DeriveTraversable
            DoAndIfThenElse
            EmptyCase
            EmptyDataDecls
            EmptyDataDeriving
            ExistentialQuantification
            ExplicitForAll
            FlexibleContexts
            FlexibleInstances
            ForeignFunctionInterface
            GADTSyntax
            GeneralisedNewtypeDeriving
            HexFloatLiterals
            ImplicitPrelude
            InstanceSigs
            KindSignatures
            MonomorphismRestriction
            MultiParamTypeClasses
            NamedFieldPuns
            NamedWildCards
            NumericUnderscores
            PatternGuards
            PolyKinds
            PostfixOperators
            RankNTypes
            RelaxedPolyRec
            ScopedTypeVariables
            StandaloneDeriving
            StarIsType
            TraditionalRecordSyntax
            TupleSections
            TypeApplications
            TypeOperators
            TypeSynonymInstances

    if impl ( ghc < 9.2 ) && impl ( ghc >= 8.10 )
        default-extensions:
            ImportQualifiedPost
            StandaloneKindSignatures

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , Cabal
        , algebraic-graphs   >=0.6 && <0.8
        , base               >=4.7 && <5
        , bifunctors         >=5.5.11 && <5.7
        , bytestring         >=0.11.3 && <0.13
        , chart-svg          >=0.4 && <0.5
        , containers         >=0.6 && <0.7
        , cryptonite
        , directory
        , dotparse
        , fgl
        , flatparse          >=0.3.5 && <0.6
        , optics-core        >=0.4 && <0.5
        , streamly           >=0.8 && <0.10
        , streamly-archive   >=0.1 && <0.3
        , streamly-core      >=0.1 && <0.2
        , string-interpolate >=0.3 && <0.4
    exposed-modules: Research.Hackage
    default-extensions:
